--- a/tasks/update-config-runner.yml
+++ b/tasks/update-config-runner.yml
@@ -377,7 +377,7 @@
     dest: "{{ temp_runner_config.path }}"
     regexp: '^\s*\[runners\.cache\.s3\]'
     line: '    [runners.cache.s3]'
-    state: "{{ 'present' if gitlab_runner.cache_type is defined else 'absent' }}"
+    state: "{{ 'present' if gitlab_runner.cache_type == 's3' else 'absent' }}"
     insertafter: '^\s*\[runners\.cache\]'
     backrefs: no
   check_mode: no
@@ -403,7 +403,7 @@
     dest: "{{ temp_runner_config.path }}"
     regexp: '^\s*\[runners\.cache\.azure\]'
     line: '    [runners.cache.azure]'
-    state: "{{ 'present' if gitlab_runner.cache_type is defined else 'absent' }}"
+    state: "{{ 'present' if gitlab_runner.cache_type == 'azure' else 'absent' }}"
     insertafter: '^\s*\[runners\.cache\]'
     backrefs: no
   check_mode: no
